@@ -464,7 +464,5 @@ y a la hora de dibujar los botones de scroll mirar ese flag también
 
 -Acciones con boton derecho sobre iconos inferiores, por ejemplo play una cinta real insertada, o abrir/cerrar tapa de hilow
 
--Accion/F/icono para topspeed SI/NO. ya existia!
-
 
 -en FAQ formatos MDR/RMD, DDH/RAW
