@@ -5,6 +5,7 @@ ZEsarUX 11.1 - Zorro edition. 30 July 2024
 Added ZX Microdrive emulation on ZX Spectrum: that includes:
 - Standard MDR emulation. Allow to browse inside MDR files, see file map, fragmentation, rename files, sectors info, chkdsk and emulate bad sectors
 - Raw microdrive emulation. Supporting other non-interface1 rom file formats, like extending microdrive space with Multiface 128 or CP/M for LEC memory. Allow to see microdrive raw map (gap zones, sync bytes, data) and have "real problems", like autogenerate bad sectors or stretching the microdrive when it's new.
+- Simulate data sound on read and write
 - Visual Microdrive: Allow to see a microdrive cartridge in action
 
 Added Visual Cassette Tape window
